--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ a {
         <a href="https://twitter.com/nlohmann" title="Twitter: @nlohmann">
             <i class="fa fa-twitter"></i>
         </a>
-        <a href="https://github.com/nlohmann" title:"Github: nlohmann">
+        <a href="https://github.com/nlohmann" title="Github: nlohmann">
             <i class="fa fa-github"></i>
         </a>
         <a href="http://www.linkedin.com/in/nielslohmann" title="LinkedIn profile">
