--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <style>
 body {
-    background: #222;
+    background: url('background.png');
     width: 100%;
     height: 100%;
     text-align: center;
@@ -37,15 +37,17 @@ body {
 }
 
 #icons {
+    padding-top: 1em;
+    padding-bottom: 0.5em;
     position: absolute;
     text-align: center;
     width: 100%;
-    bottom: 1em;
+    bottom: 0;
 }
 
 .fa {
     font-size: 2em;
-    color:#444;
+    color:#555;
     margin-left: 0.5em;
     margin-right: 0.5em;
     margin-bottom: 0.5em;
