meta tags, moved layout to separate file

--- a/index.html
+++ b/index.html
@@ -1,71 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>nlohmann.me</title>
-<meta charset="UTF-8">
-<meta name="google-site-verification" content="JH4ZFJGVhfcn8U4xYfwyisr_OM5BqZTtDd0_08rCCjA" />
-<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="avenir.css">
-
-<style>
-body {
-    background: url('background.png');
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-#name {
-    width:500px;
-    height:300px;
-    position:absolute;
-    left:50%;
-    top:45%;
-    margin:-150px 0 0 -250px;
-    font-family: Avenir;
-    color: #fff;
-    font-size: 40px;
-}
-
-#name div {
-    padding-top: 2.5%;
-}
-
-#name span a {
-    font-size: 20px;
-    color: #ccc;
-}
-
-#icons {
-    padding-top: 1em;
-    padding-bottom: 0.5em;
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    bottom: 0;
-}
-
-.fa {
-    font-size: 2em;
-    color:#555;
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-    margin-bottom: 0.5em;
-}
-
-.fa:hover {
-    color:#fff;
-}
-
-.tooltip {
-    font-family: Avenir;
-    font-size: 1em;
-}
-
-a {
-    text-decoration: none;
-}
-</style>
+    <title>nlohmann.me</title>
+    <meta charset="UTF-8">
+    <meta name="google-site-verification" content="JH4ZFJGVhfcn8U4xYfwyisr_OM5BqZTtDd0_08rCCjA" />
+    <meta name="author" content="Niels Lohmann">
+    <meta name="publisher" content="Niels Lohmann">
+    <meta name="copyright" content="Niels Lohmann">
+    <meta name="description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
+    <meta name="keywords" content="Niels, Lohmann, University, of, Rostock, Germany">
+    <meta name="robots" content="index, follow">
+    <meta name="DC.Creator" content="Niels Lohmann">
+    <meta name="DC.Publisher" content="Niels Lohmann">
+    <meta name="DC.Rights" content="Niels Lohmann">
+    <meta name="DC.Description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
+    <meta name="DC.Language" content="en-us">
+    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="avenir.css">
+    <link rel="stylesheet" type="text/css" href="layout.css">
 </head>
 
 <body>
