--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             class="btn popoverData" data-content="chat with me" rel="popover" data-placement="top" data-trigger="hover">
             <i class="fa fa-skype"></i>
         </a>
+        <a href="http://dblp.uni-trier.de/pers/hd/l/Lohmann:Niels.html"
+            class="btn popoverData" data-content="my publications" rel="popover" data-placement="top" data-trigger="hover">
+            <i class="fa fa-book"></i>
+        </a>
         <a href="https://twitter.com/nlohmann"
             class="btn popoverData" data-content="my microblog" rel="popover" data-placement="top" data-trigger="hover">
             <i class="fa fa-twitter"></i>
