--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <meta name="DC.Rights" content="Niels Lohmann">
     <meta name="DC.Description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
     <meta name="DC.Language" content="en-us">
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="avenir.css">
-    <link rel="stylesheet" type="text/css" href="layout.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/avenir.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/layout.css">
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script type='text/javascript' src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.1.0/bootstrap.min.js"></script>
+    <script type="text/javascript" src="resources/js/jquery-1.10.2.min.js"></script>
+    <script type='text/javascript' src="resources/js/bootstrap.min.js"></script>
     <script type="text/javascript">
     $(window).load(function(){
     $('.popoverData').popover();
@@ -31,7 +31,7 @@
 
 <body>
     <div id="name">
-        <img src="avatar.png" alt="Niels Lohmann">
+        <img src="resources/images/avatar.png" alt="Niels Lohmann">
         <div>Niels Lohmann<br>
             <span>
                 <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a>
