--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
             class="btn popoverData" data-content="my software" rel="popover" data-placement="top" data-trigger="hover">
             <i class="fa fa-github"></i>
         </a>
+        <a href="https://flattr.com/profile/nlohmann"
+            class="btn popoverData" data-content="flattr me" rel="popover" data-placement="top" data-trigger="hover">
+            <i class="fa fa-heart"></i>
+        </a>
         <a href="http://www.linkedin.com/in/nielslohmann"
             class="btn popoverData" data-content="my academic network" rel="popover" data-placement="top" data-trigger="hover">
             <i class="fa fa-linkedin"></i>
