link to Google+

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
 
     <div id="metadata" itemscope itemtype="http://schema.org/Person">
+        <a href="https://plus.google.com/+NielsLohmann?
+         rel=author">Google</a>
+
         <span itemprop="name">Niels Lohmann</span>
         <span itemprop="jobTitle">Postdoc</span>
         <span itemprop="email">mail@nlohmann.me</span>
