--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="JH4ZFJGVhfcn8U4xYfwyisr_OM5BqZTtDd0_08rCCjA" />
     <meta name="author" content="Niels Lohmann">
+    <meta name="contact" content="mail@nlohmann.me">
     <meta name="publisher" content="Niels Lohmann">
     <meta name="copyright" content="Niels Lohmann">
     <meta name="description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
