--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </div>
 
     <div id="metadata" itemscope itemtype="http://schema.org/Person">
-        <a href="https://plus.google.com/+NielsLohmann?
-         rel=author">Google</a>
+        <a href="https://plus.google.com/+NielsLohmann?rel=author">Google</a>
 
         <span itemprop="name">Niels Lohmann</span>
         <span itemprop="jobTitle">Postdoc</span>
