--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>nlohmann.me</title>
+    <title>Niels Lohmann</title>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="JH4ZFJGVhfcn8U4xYfwyisr_OM5BqZTtDd0_08rCCjA" />
     <meta name="author" content="Niels Lohmann">
