--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <body>
     <div id="content">
-        <img src="resources/images/avatar.png" alt="Niels Lohmann">
+        <img src="resources/images/avatar.jpg" alt="Niels Lohmann">
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
             <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a>
@@ -40,7 +40,6 @@
     </div>
 
     <div id="metadata" itemscope itemtype="http://schema.org/Person">
-
         <span itemprop="name">Niels Lohmann</span>
         <span itemprop="jobTitle">Postdoc</span>
         <span itemprop="email">mail@nlohmann.me</span>
