--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
         var radius = ($('#avatar').height() / 2) + 50;
         var fields = $('.btn'), container = $('#circle'),
             width = container.width(), height = container.height(),
-            angle = 0, step = (2*Math.PI) / fields.length;
+            step = (2*Math.PI) / fields.length, angle = 90 + step*2.5;
         fields.each(function() {
             var x = Math.round(width/2 + radius * Math.cos(angle) - $(this).width()/2);
             var y = Math.round(height/2 + radius * Math.sin(angle) - $(this).height()/2);
@@ -114,7 +114,6 @@
             class="btn popoverData" data-content="my videos" rel="popover" data-placement="top" data-trigger="hover">
             <i class="fa fa-vimeo-square"></i>
         </a>
-                
       </div>
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
