--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/layout2.css">
 
     <noscript>
-      <style>.btn { position: relative; } </style>
+      <style>.btn { position: relative; } #content { top: 200px; } </style>
     </noscript>
 
     <script type="text/javascript" src="resources/js/jquery-1.10.2.min.js"></script>
@@ -69,7 +69,7 @@
         </a>
         <a href="mailto:mail@nlohmann.me"
             class="btn popoverData" data-content="email me" title="email me" rel="popover" data-placement="left" data-trigger="hover">
-            <i class="fa fa-inbox"></i>
+            <i class="fa fa-envelope"></i>
         </a>
         <a href="tel:+491785679727"
             class="btn popoverData" data-content="call me" title="call me" rel="popover" data-placement="left" data-trigger="hover">
