--- a/index.html
+++ b/index.html
@@ -21,18 +21,105 @@
     <link rel="stylesheet" type="text/css" href="resources/css/avenir.css">
     <link rel="stylesheet" type="text/css" href="resources/css/layout.css">
 
+    <noscript>
+      <style>.btn { position: relative; } #content { top: 200px; } </style>
+    </noscript>
+
     <script type="text/javascript" src="resources/js/jquery-1.10.2.min.js"></script>
     <script type='text/javascript' src="resources/js/bootstrap.min.js"></script>
     <script type="text/javascript">
     $(window).load(function(){
     $('.popoverData').popover();
     });
+
+    $(function(){
+    function distributeFields() {
+        var radius = ($('#avatar').height() / 2) + 50;
+        var fields = $('.btn'), container = $('#circle'),
+            width = container.width(), height = container.height(),
+            step = (2*Math.PI) / fields.length, angle = 90 + step*2.5;
+        fields.each(function() {
+            var x = Math.round(width/2 + radius * Math.cos(angle) - $(this).width()/2);
+            var y = Math.round(height/2 + radius * Math.sin(angle) - $(this).height()/2);
+            if(window.console) {
+                console.log($(this).text(), x, y);
+            }
+            $(this).css({
+                left: x + 'px',
+                top: y + 'px'
+            });
+            angle += step;
+        });
+    }
+
+    distributeFields();
+    });
     </script>
 </head>
 
 <body>
     <div id="content">
-        <img src="resources/images/avatar.jpg" alt="Niels Lohmann">
+      <div id="circle">
+        <img src="resources/images/avatar.jpg" alt="Niels Lohmann" id="avatar">
+        <noscript><br/></noscript>
+
+        <a href="http://www.informatik.uni-rostock.de/~nl"
+            class="btn popoverData" data-content="my professional website" title="my professional website" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-suitcase"></i>
+        </a>
+        <a href="mailto:mail@nlohmann.me"
+            class="btn popoverData" data-content="email me" title="email me" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-envelope"></i>
+        </a>
+        <a href="tel:+491785679727"
+            class="btn popoverData" data-content="call me" title="call me" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-phone"></i>
+        </a>
+        <a href="skype:nlohmann?chat"
+            class="btn popoverData" data-content="chat with me" title="chat with me" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-skype"></i>
+        </a>
+        <a href="http://dblp.uni-trier.de/pers/hd/l/Lohmann:Niels.html"
+            class="btn popoverData" data-content="my publications" title="my publications" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-book"></i>
+        </a>
+        <a href="https://twitter.com/nlohmann"
+            class="btn popoverData" data-content="my microblog" title="my microblog" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-twitter"></i>
+        </a>
+        <a href="https://github.com/nlohmann"
+            class="btn popoverData" data-content="my software" title="my software" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-github"></i>
+        </a>
+        <a href="https://flattr.com/profile/nlohmann"
+            class="btn popoverData" data-content="flattr me" title="flattr me" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-heart"></i>
+        </a>
+        <a href="http://www.linkedin.com/in/nielslohmann"
+            class="btn popoverData" data-content="my academic network" title="my academic network" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-linkedin"></i>
+        </a>
+        <a href="https://www.xing.com/profile/Niels_Lohmann"
+            class="btn popoverData" data-content="my professional network" title="my professional network" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-xing"></i>
+        </a>
+        <a href="https://www.facebook.com/niels.lohmann"
+            class="btn popoverData" data-content="my social network" title="my social network" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-facebook"></i>
+        </a>
+        <a href="https://foursquare.com/nlohmann"
+            class="btn popoverData" data-content="my location" title="my location" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-foursquare"></i>
+        </a>
+        <a href="http://blog.nlohmann.me"
+            class="btn popoverData" data-content="my blog" title="my blog" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-comment"></i>
+        </a>
+        <a href="https://vimeo.com/nlohmann"
+            class="btn popoverData" data-content="my videos" title="my videos" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-vimeo-square"></i>
+        </a>
+      </div>
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
             <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a>
@@ -68,65 +155,6 @@
         <a href="http://www.informatik.uni-rostock.de/~nl" itemprop="url">website</span>
         <a href="http://www.informatik.uni-rostock.de/~nl/resources/img/nlohmann.jpg" itemprop="image">photo</a>
     </div>
-
-    <div id="icons">
-        <a href="http://www.informatik.uni-rostock.de/~nl"
-            class="btn popoverData" data-content="my professional website" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-suitcase"></i>
-        </a>
-        <a href="mailto:mail@nlohmann.me"
-            class="btn popoverData" data-content="email me" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-inbox"></i>
-        </a>
-        <a href="tel:+491785679727"
-            class="btn popoverData" data-content="call me" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-phone"></i>
-        </a>
-        <a href="skype:nlohmann?chat"
-            class="btn popoverData" data-content="chat with me" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-skype"></i>
-        </a>
-        <a href="http://dblp.uni-trier.de/pers/hd/l/Lohmann:Niels.html"
-            class="btn popoverData" data-content="my publications" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-book"></i>
-        </a>
-        <a href="https://twitter.com/nlohmann"
-            class="btn popoverData" data-content="my microblog" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-twitter"></i>
-        </a>
-        <a href="https://github.com/nlohmann"
-            class="btn popoverData" data-content="my software" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-github"></i>
-        </a>
-        <a href="https://flattr.com/profile/nlohmann"
-            class="btn popoverData" data-content="flattr me" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-heart"></i>
-        </a>
-        <a href="http://www.linkedin.com/in/nielslohmann"
-            class="btn popoverData" data-content="my academic network" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-linkedin"></i>
-        </a>
-        <a href="https://www.xing.com/profile/Niels_Lohmann"
-            class="btn popoverData" data-content="my professional network" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-xing"></i>
-        </a>
-        <a href="https://www.facebook.com/niels.lohmann"
-            class="btn popoverData" data-content="my social network" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-facebook"></i>
-        </a>
-        <a href="https://foursquare.com/nlohmann"
-            class="btn popoverData" data-content="my location" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-foursquare"></i>
-        </a>
-        <a href="http://blog.nlohmann.me"
-            class="btn popoverData" data-content="my blog" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-comment"></i>
-        </a>
-        <a href="https://vimeo.com/nlohmann"
-            class="btn popoverData" data-content="my videos" rel="popover" data-placement="top" data-trigger="hover">
-            <i class="fa fa-vimeo-square"></i>
-        </a>
-    </div>
-</body>
+  </body>
 
 </html>
