--- a/house.html
+++ b/house.html
@@ -1,21 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Niels Lohmann</title>
+    <title>Dr. House</title>
     <meta charset="UTF-8">
-    <meta name="google-site-verification" content="JH4ZFJGVhfcn8U4xYfwyisr_OM5BqZTtDd0_08rCCjA" />
-    <meta name="author" content="Niels Lohmann">
-    <meta name="contact" content="mail@nlohmann.me">
-    <meta name="publisher" content="Niels Lohmann">
-    <meta name="copyright" content="Niels Lohmann">
-    <meta name="description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
-    <meta name="keywords" content="Niels, Lohmann, University, of, Rostock, Germany">
-    <meta name="robots" content="index, follow">
-    <meta name="DC.Creator" content="Niels Lohmann">
-    <meta name="DC.Publisher" content="Niels Lohmann">
-    <meta name="DC.Rights" content="Niels Lohmann">
-    <meta name="DC.Description" content="Niels Lohmann, Postdoc researcher at the University of Rostock">
-    <meta name="DC.Language" content="en-us">
+    <meta name="robots" content="noindex">
     <link rel="stylesheet" type="text/css" href="resources/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="resources/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="resources/css/avenir.css">
