--- a/house.html
+++ b/house.html
@@ -47,7 +47,7 @@ overflow:hidden;
 
 <body>
   <div class="google-maps">
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2428.3181027856026!2d13.4019822!3d52.50958205!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e283d524497%3A0xf3ff64dec694a7f1!2sBeuthstra%C3%9Fe+1!5e0!3m2!1sde!2sde!4v1394655074265" width="800" height="600" frameborder="0" style="border:0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2428.318238154515!2d13.4019739!3d52.5095796!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a84e283d524497%3A0xf3ff64dec694a7f1!2sBeuthstra%C3%9Fe+1!5e0!3m2!1sde!2s!4v1396184090651" width="800" height="600" frameborder="0" style="border:0"></iframe>
   </div>
 
   <div class="info">
