--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             class="btn popoverData" data-content="email me" title="email me" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-envelope"></i>
         </a>
+        <a href="https://keybase.io/nlohmann"
+            class="btn popoverData" data-content="my public key" title="verify me" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-lock"></i>
+        </a>
         <a href="tel:+491785679727"
             class="btn popoverData" data-content="call me" title="call me" rel="popover" data-placement="left" data-trigger="hover">
             <i class="fa fa-phone"></i>
