--- a/house.html
+++ b/house.html
@@ -52,8 +52,8 @@ overflow:hidden;
 
   <div class="info">
     <h2>Anreise</h2>
-    <p>Der U-Bahnhof <strong>Spittelmarkt</strong> ist direkt um die Ecke. Die U2 bringt dich direkt vom Alexanderplatz, Potsdamer Platz oder Zoologischen Garten hierhin. Außerdem kannst du mit dem Bus 248 ohne Umsteigen den Ostbahnhof erreichen.</p>
-    <p>Wenn du mit dem Auto anreisen willst, tipp <strong>Beuthstraße 1a, 10117 Berlin</strong> in dein Navi. Achtung: Es gibt auch eine solche Straße Niederschönhausen! Die Parkplatzsituation ist "Berlin Mitte". Wenn du keine Lust hast, ewig zu suchen, kannst du dein Glück in der Tiefgarage des Motel One (Axel-Springer-Straße 54b) versuchen.</p>
+    <p>Der U-Bahnhof <strong>Spittelmarkt</strong> ist direkt um die Ecke. Die U2 bringt dich direkt vom Alexanderplatz, Potsdamer Platz oder Zoologischen Garten hierhin. Außerdem kannst du mit dem Bus 248 ohne Umsteigen den Ostbahnhof oder Berlin Südkreuz erreichen.</p>
+    <p>Wenn du mit dem Auto anreisen willst, tipp <strong>Beuthstraße 1a, 10117 Berlin</strong> in dein Navi. Achtung: Es gibt auch eine solche Straße Niederschönhausen!</p><p>In der Neuen Grünstraße gibt es mit Glück kostenlose Parkplätze. In der Beuthstraße kann direkt vor der Tür mit Parkschein geparkt werden (Samstag ab 22 Uhr und Sonntag kostenfrei). Wenn du keine Lust hast, ewig zu suchen, kannst du dein Glück in der Tiefgarage des Motel One (Axel-Springer-Straße 54b) versuchen.</p>
     <p>Zur Wohnung kommt ihr von der Beuthstraße über den Hof. Wie freuen uns auf deinen Besuch!</p>
   </div>
 </body>
