updated to Font Awesome 4.1.0

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <noscript><br/></noscript>
 
         <a href="http://www.informatik.uni-rostock.de/~nl"
-            class="btn popoverData" data-content="my professional website" title="my professional website" rel="popover" data-placement="left" data-trigger="hover">
-            <i class="fa fa-suitcase"></i>
+            class="btn popoverData" data-content="my university website" title="my university website" rel="popover" data-placement="left" data-trigger="hover">
+            <i class="fa fa-university"></i>
         </a>
         <a href="mailto:mail@nlohmann.me"
             class="btn popoverData" data-content="email me" title="email me" rel="popover" data-placement="left" data-trigger="hover">
