--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
       </div>
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
-            <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a><br><small>soon: <a href="http://www.carmeq.de">Software Designer at Carmeq</a></small>
+          <a href="http://www.carmeq.de">Software Designer at Carmeq</a>
+            <br><small>previously: <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a></small>
         </div>
     </div>
 
