--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
-          <a href="http://www.carmeq.de">Software Designer at Carmeq</a>
+          <a href="http://www.carmeq.de">System Designer at Carmeq</a>
             <br><small>previously: <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a></small>
         </div>
     </div>
