--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             class="btn popoverData" data-content="flattr me" title="flattr me" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-heart"></i>
         </a>
+        <a href="http://paypal.me/nlohmann"
+            class="btn popoverData" data-content="my paypal" title="my paypal" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-paypal"></i>
+        </a>
         <a href="http://www.linkedin.com/in/nielslohmann"
             class="btn popoverData" data-content="my academic network" title="my academic network" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-linkedin"></i>
