added stack overflow

--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
             class="btn popoverData" data-content="my software" title="my software" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-github"></i>
         </a>
+        <a href="http://stackoverflow.com/users/266378/niels-lohmann"
+            class="btn popoverData" data-content="my questions and answers" title="my questions and answers" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-stack-overflow"></i>
+        </a>
         <a href="https://flattr.com/profile/nlohmann"
             class="btn popoverData" data-content="flattr me" title="flattr me" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-heart"></i>
