added Amazon wishlist

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
             class="btn popoverData" data-content="flattr me" title="flattr me" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-heart"></i>
         </a>
+        <a href="http://www.amazon.de/registry/wishlist/KQ7Q8JXTR93J/ref=cm_sw_r_tw_ws_SljhxbBY8TBV6"
+            class="btn popoverData" data-content="my wishlist" title="my wishlist" rel="popover" data-placement="right" data-trigger="hover">
+            <i class="fa fa-amazon"></i>
+        </a>
         <a href="http://paypal.me/nlohmann"
             class="btn popoverData" data-content="my paypal" title="my paypal" rel="popover" data-placement="right" data-trigger="hover">
             <i class="fa fa-paypal"></i>
