--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       </div>
         <div id="content_name">Niels Lohmann</div>
         <div id="content_description">
-          <a href="http://www.carmeq.de">System Designer at Carmeq</a>
-            <br><small>previously: <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a></small>
+            Senior Software Architect at MBition
+            <br><small>previously: <a href="http://www.carmeq.de">System Designer at Carmeq</a> and <a href="http://www.informatik.uni-rostock.de/~nl/">Postdoc researcher at the University of Rostock</a></small>
         </div>
     </div>
 
